fix fixed columns align bug in small Table, close #2933

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -160,6 +160,7 @@
     border: 1px solid @border-color-split;
     border-radius: @border-radius-base;
 
+    .@{table-prefix-cls}-header > table,
     .@{table-prefix-cls}-body > table {
       border: 0;
       padding: 0 8px;
